Tiny code refactoring